# calendar-events

./: .gitignore  .hc  .running  08b0478d.js  1390c02e.js  3b7e77b2.js  68f47726.js  6a041e37.js  6fe58467.js  Cargo.toml  README.md  b6d66d50.js  bundle.d.ts  calendar-events.module.d.ts  calendar-events.service.d.ts  custom-elements.json  default.nix  dev-setup.md  fb334e7d.js  iframe.html  index.d.ts  index.html  index.js  index.js.map  package-lock.json  package.json  types.d.ts  utils.d.ts
.circleci/: config.yml
.sandbox/xLDuEveDf03-TT4dOO43F/: conductor-config.yaml
.sandbox/xLDuEveDf03-TT4dOO43F/cell-uhC0kBCMegR51mpxYRM85d5RBYNcDAt4EmKKru4EN4Wq9emT9-4kw-uhCAk-aisGv8WQIAppghpJTEs7r-xKuvBrxSAsr4isTwv9ODDeQxh/: lock.mdb
.sandbox/xLDuEveDf03-TT4dOO43F/conductor/: lock.mdb
.sandbox/xLDuEveDf03-TT4dOO43F/keystore/: pid  store
.sandbox/xLDuEveDf03-TT4dOO43F/wasm/: lock.mdb
crates/coordinator_zomes/calendar_events/: Cargo.toml
crates/coordinator_zomes/calendar_events/src/: lib.rs
crates/coordinator_zomes/calendar_events/tests/: basic_calendar_events.rs
crates/coordinator_zomes/profiles/: Cargo.toml
crates/integrity/: Cargo.toml
crates/integrity/src/: lib.rs
crates/integrity_zomes/calendar_events/: Cargo.toml
crates/integrity_zomes/calendar_events/src/: lib.rs
crates/profiles/: Cargo.toml
crates/zome/: Cargo.toml
crates/zome/src/: lib.rs
crates/zome/tests/: basic_calendar_events.rs
elements/: base-calendar.d.ts  calendar-event-detail.d.ts  create-calendar-event.d.ts  hod-create-calendar-event.d.ts  hod-my-calendar.d.ts  my-calendar.d.ts
example-dna/: README.md
example-dna/tests/: package-lock.json  package.json
example-dna/tests/src/: index.ts
graphql/: queries.d.ts  resolvers.d.ts  schema.d.ts
nix/: sources.json
src/: calendar_event.rs
ui/: .eslintrc.js  README.md  custom-elements.json  es-dev-plugins.js  karma.conf.js  package-lock.json  package.json  rollup-bundle.config.js  rollup.config.js  tsconfig.json  web-dev-server.config.mjs  web-dev.plugins.mjs
ui/.storybook/: main.js  preview-head.html
ui/demo/: es-dev-server.config.js  index.html  web-dev-server.config.mjs
ui/e2e/: apollo.test.js  calendar.test.js  hod-calendar-event.test.js
ui/src/: bundle.ts  calendar-events-service.ts  calendar-events.module.ts  calendar-events.service.ts  client.ts  context.ts  hod-calendar-event.ts  index.ts  setup-components.ts  setup.ts  types.ts  utils.ts
ui/src/elements/: all-events-calendar.ts  base-calendar.ts  calendar-event-detail.ts  calendar-events-context.ts  create-calendar-event.ts  event-calendar.ts  hod-calendar-event.ts  hod-create-calendar-event.ts  hod-full-calendar.ts  hod-my-calendar.ts  my-calendar.ts  sharedStyles.ts
ui/src/graphql/: queries.ts  resolvers.ts  schema.ts
ui/stories/: hod-create-calendar-event.stories.md  hod-my-calendar.stories.md  index.stories.md
ui/test/: elements.test.js  graphql-middleware.test.js  hod-calendar-event.test.ts  hod-create-calendar-event.test.js  hod-full-calendar.test.js  hod-my-calendar.test.js  resolvers.test.js
ui/test/mocks/: AppWebsocket.mock.js  calendar-events.mock.js  index.js  utils.js
we-applet/: package.json  rollup.config.js
we-applet/demo/: index.html
we-applet/src/: calendar-events-applet.ts  cross-we-calendar-events.ts  index.ts  types.ts  utils.ts
we-applet/src/elements/: cross-cell-events-calendar.ts
we-applet/workdir/: calendar_events_applet.webhapp  dna.yaml  happ.yaml  web-happ.yaml
workdir/: dna.yaml  happ.yaml
zome/: Cargo.toml  README.md
zome/calendar_events.dna.workdir/: calendar_events-test.dna  dna.json  dna.yaml
zome/tests/: package-lock.json  package.json
zome/tests/src/: index.ts
zome/workdir/dna/: calendar_events-test.dna  dna.yaml
zome/workdir/happ/: happ.yaml  sample-happ.happ  sample.happ
zome/zomes/calendar_events/: Cargo.toml
zome/zomes/calendar_events/src/: calendar_event.rs  lib.rs  utils.rs
zome/zomes/common/: Cargo.toml
zome/zomes/common/src/: lib.rs
