[workspace]
members = [
  "zomes/calendar_events",
  "zomes/common",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "3a437bab4b09de35c3ef67fc8f6a384a84e471e3", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "3a437bab4b09de35c3ef67fc8f6a384a84e471e3", package = "holo_hash"}
