[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "hc_zome_calendar_events"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_calendar_events"

[dependencies]
derive_more = "0"
serde = "1"

chrono = {version = "0.4", features = ["serde"]}
hc_zome_calendar_events_integrity = {path = "../integrity"}
hdk = {version = "0.0.136"}

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.136", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.143", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
