[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "calendar_events_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "calendar_events_coordinator"

[dependencies]
derive_more = "0"
serde = "1"

chrono = {version = "0.4", features = ["serde"]}
calendar_events_integrity = {path = "../../integrity_zomes/calendar_events"}
hdk = {version = "0.0.147"}

[dev-dependencies]
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.147", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.155", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
