[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "calendar_events_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "calendar_events_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hdi = "0.0.18"
chrono = {version = "0.4", features = ["serde"]}
