[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_calendar_events"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_calendar_events"

[dependencies]
derive_more = "0"
serde = "1"

hdk = { version = "0.0.121", features = ["encoding"] }
chrono = {version = "0.4", features = ["serde"]}
